Hide about photo for now Update about page description Update css h2 format in posts to remove "#" symbol

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -76,16 +76,9 @@ My name is Dustin and I&rsquo;m the author of this site. I&rsquo;ve been in the 
     <div id="search-dropdown-mobile"></div>
 </div>
 <main class="main">
-                <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">About</h1><div class="content" id="content"><p><img
-        class="lazyload"
-        src="/svg/loading.min.svg"
-        data-src="/images/Portrait.png"
-        data-srcset="/images/Portrait.png, /images/Portrait.png 1.5x, /images/Portrait.png 2x"
-        data-sizes="auto"
-        alt="/images/Portrait.png"
-        title="Image1" /></p>
+                <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">About</h1><div class="content" id="content"><!-- raw HTML omitted -->
 <p>Thanks for visiting Combat Design Dojo!</p>
-<p>My name is Dustin and I&rsquo;m the author of this site.  I&rsquo;ve been in the game industry since 2017 and contributed to several AAA titles.  This website came about as a means to share my tips and tricks from experience in designing combat for games.  Before I created this site, trying to find resources online that went deep into the design of combat systems and features were scarce with little technical details available. My goal is to fill this gab and share knowledge on the low level workings of designing games with compelling combat.</p>
+<p>My name is Dustin and I&rsquo;m the author of this site.  I&rsquo;ve been in the game industry since 2017 and contributed to several AAA titles. This website came about as a means to share my tips and tricks from experience in designing combat for games.  Before I created this site, trying to find resources online that went deep into the design of combat systems and features were scarce with little technical details available. My goal is to fill this gap and share knowledge on the low level workings of designing games with compelling combat.</p>
 <hr>
 <p>Any questions or feedback, please feel free to reach out at 
 <a href="mailto:dustin@combatdesigndojo.com" rel="">dustin@combatdesigndojo.com</a></p>
